images and some css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
         <h1>this is bad.</h2>
     </header>
     <main>
-        <div class="image"><img src="images/skull.PNG" alt="skull logo"></div>
+        <div id="product">
+            <img class="skull" src="images/skull.PNG" alt="skull logo">
+            <img class="hoodie" src="images/hood.png" alt="skull hood mock-up">
+        </div>
     </main>
 </body>
 </html>
