logo size and copyright

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <img class="logo" src="images/bad..jpg" alt="bad logo">
-        <h1>this is bad.</h2>
+        <h1>this is bad. brand</h2>
     </header>
     <main>
         <div id="product">
@@ -17,5 +17,8 @@
             <img class="hoodie" src="images/hood.png" alt="skull hood mock-up">
         </div>
     </main>
+    <footer>
+        <p>&copy; 2023 bad. brand</p>
+    </footer>
 </body>
 </html>
