added product placeholders, added animation on css

--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
         <h1>this is bad. brand</h2>
     </header>
     <main>
-        <div id="product">
-            <img class="skull" src="images/skull.PNG" alt="skull logo">
-            <img class="hoodie" src="images/hood.png" alt="skull hood mock-up">
+        <div id="gallery">
+            <a href="shop.html"> <img class="hoodie" src="images/hood.png" alt="skull hood mock-up">
+            </a>
+            <div class="product">
+                <p>product image/link goes here</p>
+            </div>
+            <div class="product">
+                <p>product image/link goes here</p>
+            </div>
         </div>
     </main>
     <footer>
