--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
                 <p>product image/link goes here</p>
             </div>
         </div>
+        <div id="story">
+            <p>what is bad.? glad you asked...</p>
+        </div>
     </main>
     <footer>
         <p>&copy; 2023 bad. brand</p>
