--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/index.css">
-    <title>Bad Brand</title>
+    <title>Bad. Brand</title>
 </head>
 <body>
     <header>
@@ -28,6 +28,7 @@
     </main>
     <footer>
         <p>&copy; 2023 bad. brand</p>
+        <a href="socials.html">socials</a>
     </footer>
 </body>
 </html>
