fixed header, added footer css

--- a/socials.html
+++ b/socials.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="socials_styles.css">
+    <link rel="stylesheet" href="styles/socials_styles.css">
     <title>socials</title>
 </head>
 <body>
@@ -12,6 +12,7 @@
     </header>
     <footer>
         <p>&copy; 2023 bad. brand</p>
+        <a href="index.html">home</a>
         <a href="socials.html">socials</a>
     </footer>
 </body>
