--- a/index.html
+++ b/index.html
@@ -32,3 +32,31 @@
     </footer>
 </body>
 </html>
+
+<script>
+    // Function to fetch product data from the Printful API
+    async function fetchProductData() {
+        try {
+            const response = await fetch('/get_product.py'); // Replace with the actual endpoint of your Python API
+            const data = await response.json();
+            return data;
+        } catch (error) {
+            console.error('Error fetching product data:', error);
+            return null;
+        }
+    }
+
+    // Function to update the product elements with data
+    async function updateProductElements() {
+        const products = await fetchProductData();
+        if (products && products.length >= 2) {
+            document.getElementById('product1').innerHTML = `<img src="${products[0].imageUrl}" alt="${products[0].productName}"><a href="${products[0].productLink}">View Product</a>`;
+            document.getElementById('product2').innerHTML = `<img src="${products[1].imageUrl}" alt="${products[1].productName}"><a href="${products[1].productLink}">View Product</a>`;
+        }
+    }
+
+    // Call the updateProductElements function when the page loads
+    window.onload = updateProductElements;
+</script>
+</body>
+</html>
