--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="images/bad..jpg" alt="bad logo">
+        <img class="logo" src="images/bad.jpg" alt="bad logo">
         <h1>this is bad. brand</h2>
     </header>
     <main>
