--- a/socials.html
+++ b/socials.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="images/bad..jpg" alt="bad logo">
+        <img class="logo" src="images/bad.jpg" alt="bad logo">
     </header>
     <footer>
         <p>&copy; 2023 bad. brand</p>
